Browser panel: Lower height to prevent bottom being cut off

--- a/ui/stylesheets/_browser.scss
+++ b/ui/stylesheets/_browser.scss
@@ -30,7 +30,7 @@
         .panel {
             background: white;
             width: 100%;
-            height: 100%;
+            height: 90%;
             overflow: auto;
             padding: 20px;
         }
