--- a/ui/stylesheets/cloudstack.css
+++ b/ui/stylesheets/cloudstack.css
@@ -5217,7 +5217,7 @@ ul.ui-tabs-nav {
     #browser .container .panel {
       background: white;
       width: 100%;
-      height: 100%;
+      height: 90%;
       overflow: auto;
       padding: 20px; }
 
